--- a/sytles/style.css
+++ b/sytles/style.css
@@ -148,3 +148,54 @@ body {
   text-align: center;
   opacity: 0.7;
 }
+
+/* footer style start  */
+
+.footer-container {
+  height: 218px;
+  background-image: linear-gradient(to bottom,
+      rgba(255, 255, 255, 0.8),
+      rgba(255, 255, 255, 0.8)
+    ),
+    url("../images/social-bg.png");
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-contents {
+  width: 884px;
+}
+
+.footer-contents .footer-heading {
+  color: rgb(16, 16, 16);
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 40px;
+  letter-spacing: 0%;
+  text-align: center;
+}
+
+.footer-contents .footer-description {
+  color: rgb(16, 16, 16);
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 18px;
+  letter-spacing: 0%;
+  text-align: center;
+  opacity: 0.6;
+}
+
+.footer-contents .follow {
+  opacity: 0.7;
+  color: rgb(16, 16, 16);
+  font-size: 25px;
+  font-weight: 600;
+  line-height: 35px;
+  letter-spacing: 0%;
+  text-align: center;
+}
+
+/* footer style end */
